--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -1,380 +1,344 @@
 /* ---------- TOP PANEL ----------- */
-.top_panel{
-    height: 80px;
-    width:100%;
-    background: #333;
-    background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
-    background: -moz-linear-gradient(top,#333,#666);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#666');
-    /*--CSS3 Box Shadows--*/
-    -webkit-box-shadow: 0px 0px 9px #000;
-    -moz-box-shadow: 0px 0px 9px #000;
-    box-shadow: 0px 0px 9px #000;
+.top_panel {
+	height: 80px;
+	width: 100%;
+	background: #333;
+	background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
+	background: -webkit-linear-gradient(top, #333, #666);
+	background: -moz-linear-gradient(top, #333, #666);
+	background: -o-linear-gradient(top, #333, #666);
+	background: -ms-linear-gradient(top, #333, #666);
+	background: linear-gradient(top, #333, #666);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#666');
+	/*--CSS3 Box Shadows--*/
+	-webkit-box-shadow: 0px 0px 9px #000;
+	-moz-box-shadow: 0px 0px 9px #000;
+	box-shadow: 0px 0px 9px #000;
 }
-
-.inside_top_panel{
-    padding-top: 15px;
-    width:1024px;
-    height:100%;
-    margin-left: auto;
-    margin-right: auto;
+.inside_top_panel {
+	padding-top: 15px;
+	width: 1024px;
+	height: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
-
-.top_links{
-    width:400px;
-    height:50px;
-    margin-left: auto;
-    margin-right: auto;
-
+.top_links {
+	width: 400px;
+	height: 50px;
+	margin-left: auto;
+	margin-right: auto;
 }
-
 body {
-    background-color:#f2f2f2;
-    margin: 0px;
+	background-color: #f2f2f2;
+	margin: 0px;
 }
 fieldset {
-    width:312px;  
+	width: 312px;
 }
-
 legend {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    letter-spacing: -1px;
-    font-weight: bold;
-    line-height: 1.1;
-    color:#fff;
-    background: #990099;
-    border: 1px solid #c2c2c2;
-    padding: 2px 6px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100%;
+	letter-spacing: -1px;
+	font-weight: bold;
+	line-height: 1.1;
+	color: #fff;
+	background: #990099;
+	border: 1px solid #c2c2c2;
+	padding: 2px 6px;
 }
-
 h1 {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 175%;
-    letter-spacing: -1px;
-    font-weight: normal;
-    line-height: 1.1;
-    color:#333;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 175%;
+	letter-spacing: -1px;
+	font-weight: normal;
+	line-height: 1.1;
+	color: #333;
 }
-
-h5 {  
-     padding: 5px 10px;  
-     margin-left: -20px;  
-     margin-top: 10px;  
-     position: relative;  
-     width: 80%;
-
-     -moz-border-radius: 5px 5px 5px 0px;
-     border-radius: 5px 5px 5px 0px;
-  
-     background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
-     background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
-     background-image: -o-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
-
-
-        /* -------------- Font -----------------------*/
-        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+h5 {
+	padding: 5px 10px;
+	margin-left: -20px;
+	margin-top: 10px;
+	position: relative;
+	width: 80%;
+	-webkit-border-radius: 5px 5px 5px 0px;
+	-moz-border-radius: 5px 5px 5px 0px;
+	-o-border-radius: 5px 5px 5px 0px;
+	-ms-border-radius: 5px 5px 5px 0px;
+	-khtml-border-radius: 5px 5px 5px 0px;
+	border-radius: 5px 5px 5px 0px;
+	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
+	background-image: -webkit-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -moz-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -o-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -ms-linear-gradient(,, rgb(223, rgb(237 );
+	background: linear-gradient(,, rgb(223, rgb(237);
+	/* -------------- Font -----------------------*/
+	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	line-height: 30px;
-
-    color: #454545;  
-    text-shadow: 0 1px 0 white;
+	color: #454545;
+	text-shadow: 0 1px 0 white;
 }
-
-h6 {  
-     padding: 5px 10px;  
-     margin-left: -20px;  
-     margin-top: 5px;  
-     position: relative;  
-     width: 80%;
-
-     -moz-border-radius: 5px 5px 5px 0px;
-     border-radius: 5px 5px 5px 0px;
-  
-     background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
-     background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
-     background-image: -o-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
-
-
-        /* -------------- Font -----------------------*/
-        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+h6 {
+	padding: 5px 10px;
+	margin-left: -20px;
+	margin-top: 5px;
+	position: relative;
+	width: 80%;
+	-webkit-border-radius: 5px 5px 5px 0px;
+	-moz-border-radius: 5px 5px 5px 0px;
+	-o-border-radius: 5px 5px 5px 0px;
+	-ms-border-radius: 5px 5px 5px 0px;
+	-khtml-border-radius: 5px 5px 5px 0px;
+	border-radius: 5px 5px 5px 0px;
+	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
+	background-image: -webkit-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -moz-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -o-linear-gradient(,, rgb(223, rgb(237);
+	background-image: -ms-linear-gradient(,, rgb(223, rgb(237 );
+	background: linear-gradient(,, rgb(223, rgb(237);
+	/* -------------- Font -----------------------*/
+	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	line-height: 30px;
-
-    color: #454545;  
-    text-shadow: 0 1px 0 white;
+	color: #454545;
+	text-shadow: 0 1px 0 white;
 }
-
-.arrow {  
-     width: 0; height: 0;  
-     line-height: 0;  
-     border-left: 20px solid transparent;  
-     border-top: 10px solid #bbb;  
-     top: 104%;  
-     left: 0;  
-     position: absolute;
-     margin-top: -3px;
-}  
-
-
+.arrow {
+	width: 0;
+	height: 0;
+	line-height: 0;
+	border-left: 20px solid transparent;
+	border-top: 10px solid #bbb;
+	top: 104%;
+	left: 0;
+	position: absolute;
+	margin-top: -3px;
+}
 #container {
-    width:1024px;
-    height: 900px;
-
-    margin: auto;
-    margin-top: 20px;
-
-    padding:10px;
-    padding-top: 30px;  
-    
-    font-family: helvetica, arial, sans-serif;
-
-    /*
-    -webkit-border-top-left-radius: 10px;
-    -moz-border-radius-top-left: 10px;
-    border-top-left-radius: 10px;
-    -webkit-border-top-right-radius: 10px;
-    -moz-border-radius-top-right: 10px;
-    border-top-right-radius: 10px;
-
-    /*--CSS3 Box Shadows--
-    -webkit-box-shadow: 0px 0px 5px #555;
-    -moz-box-shadow: 0px 0px 5px #555;
-    box-shadow: 0px 0px 5px #555;  
-    */
-
+	width: 1024px;
+	height: 900px;
+	margin: auto;
+	margin-top: 20px;
+	padding: 10px;
+	padding-top: 30px;
+	font-family: helvetica, arial, sans-serif;
+	/*
+	-webkit-border-top-left-radius: 10px;
+	-moz-border-radius-top-left: 10px;
+	border-top-left-radius: 10px;
+	-webkit-border-top-right-radius: 10px;
+	-moz-border-radius-top-right: 10px;
+	border-top-right-radius: 10px;
+	
+	/*--CSS3 Box Shadows--
+	-webkit-box-shadow: 0px 0px 5px #555;
+	-moz-box-shadow: 0px 0px 5px #555;
+	box-shadow: 0px 0px 5px #555;
+	
+	
+	 */
 }
-
-
-#leftside{
-    position:relative;
-    width:600px;
-    height:500px;
-    float:left;
-
-    -webkit-border-top-left-radius: 10px;
-    -moz-border-radius-top-left: 10px;
-    border-top-left-radius: 10px;
-    -webkit-border-bottom-left-radius: 10px;
-    -moz-border-radius-bottom-left: 10px;
-    border-bottom-left-radius: 10px;
-
-    /*--CSS3 Box Shadows--*/
-    -webkit-box-shadow: 0px 2px 8px #aaa;
-    -moz-box-shadow: 0px 2px 8px #aaa;
-    box-shadow: 0px 2px 8px #aaa;  
+#leftside {
+	position: relative;
+	width: 600px;
+	height: 500px;
+	float: left;
+	-webkit-border-top-left-radius: 10px;
+	-moz-border-radius-top-left: 10px;
+	border-top-left-radius: 10px;
+	-webkit-border-bottom-left-radius: 10px;
+	-moz-border-radius-bottom-left: 10px;
+	border-bottom-left-radius: 10px;
+	/*--CSS3 Box Shadows--*/
+	-webkit-box-shadow: 0px 2px 8px #aaa;
+	-moz-box-shadow: 0px 2px 8px #aaa;
+	box-shadow: 0px 2px 8px #aaa;
 }
-
-#left_title{
-    position:relative;
-    height: 0px;
-    background-color: #ddd;
-    margin-top: 0px;
+#left_title {
+	position: relative;
+	height: 0px;
+	background-color: #ddd;
+	margin-top: 0px;
 }
-
-#left_video{
-    position:relative;
-    background-color: #ccc;
-    height: 360px;
-    width: 100%;
+#left_video {
+	position: relative;
+	background-color: #ccc;
+	height: 360px;
+	width: 100%;
 }
-
 #rightside {
-    position:relative;
-    width:300px;
-    padding-left:30px;
-    float: left;
+	position: relative;
+	width: 300px;
+	padding-left: 30px;
+	float: left;
 }
-
-#right_inner{
-    position:relative;
-    width:312px;
-    float:left;
-
-    -webkit-border-top-right-radius: 10px;
-    -moz-border-radius-top-right: 10px;
-    border-top-right-radius: 10px;
-    -webkit-border-bottom-right-radius: 10px;
-    -moz-border-radius-bottom-right: 10px;
-    border-bottom-right-radius: 10px;
-
-    /*--CSS3 Box Shadows--*/
-    -webkit-box-shadow: 0px 2px 8px #aaa;
-    -moz-box-shadow: 0px 2px 8px #aaa;
-    box-shadow: 0px 2px 8px #aaa; 
-
-.clear {
-    clear:both;
+#right_inner {
+	position: relative;
+	width: 312px;
+	float: left;
+	-webkit-border-top-right-radius: 10px;
+	-moz-border-radius-top-right: 10px;
+	border-top-right-radius: 10px;
+	-webkit-border-bottom-right-radius: 10px;
+	-moz-border-radius-bottom-right: 10px;
+	border-bottom-right-radius: 10px;
+	/*--CSS3 Box Shadows--*/
+	-webkit-box-shadow: 0px 2px 8px #aaa;
+	-moz-box-shadow: 0px 2px 8px #aaa;
+	box-shadow: 0px 2px 8px #aaa;
+	.clear {
+clear: both;
 }
 .holder {
-    background-color:#fff;
+	background-color: #fff;
 }
 .div_textbox {
-    width:260px;
-    float:right;
-    height:40px;
-    font:normal 18px Arial;
-    color: #999999;
+	width: 260px;
+	float: right;
+	height: 40px;
+	font: normal 18px Arial;
+	color: #999999;
 }
-
 .textbox {
-    background-image: url(images/16t.png);
-    background-repeat: no-repeat;
-    background-position:left;
-    width:260px;
-    font:normal 18px Arial;
-    color: #999999;
+	background-image: url(images/16t.png);
+	background-repeat: no-repeat;
+	background-position: left;
+	width: 260px;
+	font: normal 18px Arial;
+	color: #999999;
 }
 .textbox:focus, .textbox:hover {
-    background-color:#f9f2fc;
+	background-color: #f9f2fc;
 }
-
 .username:focus, .username:hover {
-    background-color:#f9f2fc;
+	background-color: #f9f2fc;
 }
-
 .password:focus, .password:hover {
-    background-color:#f9f2fc;
+	background-color: #f9f2fc;
 }
-
 .button_div {
-    position:relative;
-    float:left;
-    width:100%;
+	position: relative;
+	float: left;
+	width: 100%;
 }
-
 .buttons {
-    background: #ffffff;
-    font-size:17px; 
-    color: #990099; 
-    border-width: 2px;
-    border-style: solid;
-    border-color: #000000 #000000 #000000 #000000;
-    text-decoration: none;
-    text-transform:uppercase;
-    font-weight:bold;
+	background: #ffffff;
+	font-size: 17px;
+	color: #990099;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #000000 #000000 #000000 #000000;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
 }
-
 .buttons_black {
-    background: #ffffff;
-    font-size:13px; 
-    color: #000000; 
-    border-width: 2px;
-    border-style: solid;
-    border-color: #000000 #000000 #000000 #000000;
-    text-decoration: none;
-    text-transform:uppercase;
-    font-weight:bold;
-    width:120px;
-    text-align: center;
+	background: #ffffff;
+	font-size: 13px;
+	color: #000000;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #000000 #000000 #000000 #000000;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	width: 120px;
+	text-align: center;
 }
-
 .checkbox, .radio {
-    width: 19px;
-    height: 25px;
-    padding: 0 5px 0 0;
-    background: url(checkbox.gif) no-repeat;
-    display: block;
-    clear: left;
-    float: left;
+	width: 19px;
+	height: 25px;
+	padding: 0 5px 0 0;
+	background: url(checkbox.gif) no-repeat;
+	display: block;
+	clear: left;
+	float: left;
 }
-
 .radio {
-    background: url(radio.gif) no-repeat;
+	background: url(radio.gif) no-repeat;
 }
-
 .remember {
-    width:200px;
-    float:left;
-    text-align:center;
-    top:10px;
-    padding-top:11px;
+	width: 200px;
+	float: left;
+	text-align: center;
+	top: 10px;
+	padding-top: 11px;
 }
-
-
-.error_message{
-    width:auto;
-    height:auto;
-    font-family:Arial, Helvetica, sans-serif;
-    left:950px;
-    text-align:center;
-    top:57px;
-    color:purple;
+.error_message {
+	width: auto;
+	height: auto;
+	font-family: Arial, Helvetica, sans-serif;
+	left: 950px;
+	text-align: center;
+	top: 57px;
+	color: purple;
 }
-
 .highlight_error {
-    color: purple;
-    border-color: purple;
-    border-width: 5px;
+	color: purple;
+	border-color: purple;
+	border-width: 5px;
 }
-
 /* The following two classes are used for the in-field labels. */
 .in-field_block {
-    position:relative;
-    width: 275px;
+	position: relative;
+	width: 275px;
 }
-
-.log_in_bar{
-    display:inline-block;
-    width:210px;
-    margin-right:10px;
+.log_in_bar {
+	display: inline-block;
+	width: 210px;
+	margin-right: 10px;
 }
 #log_in label, #sign_up label {
-    font:normal 18px Arial;
+	font: normal 18px Arial;
 }
-
-#log_in{
-    float:right;
+#log_in {
+	float: right;
 }
-
-
 /* --------BOTTOM LINKS ---------*/
-
-#stickey_footer { /* This will make your footer stay where it is */
- background: none repeat scroll 0 0 #1D1D1D;
- border: 1px solid rgba(0, 0, 0, 0.3);
- bottom: 0;
- font-family: Arial, Helvetica, sans-serif;
- height: 40px;
- left: 50%;
- margin: 0 auto 0 -490px;
- padding: 0 10px;
- position: fixed;
- text-shadow: 1px 1px 1px #000000;
- width: 960px;
- -moz-border-radius: 10px 10px 0px 0px;
- -webkit-border-radius: 10px 10px 0px 0px;
- border-radius: 10px 10px 0px 0px;
-
-/* shadow for the footer*/
- -moz-box-shadow:0px 0px 11px #191919;
- -webkit-box-shadow:0px 0px 11px #191919;
- box-shadow:0px 0px 11px #191919;
+#stickey_footer {
+	/* This will make your footer stay where it is */
+	background: none repeat scroll 0 0 #1D1D1D;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	bottom: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	height: 40px;
+	left: 50%;
+	margin: 0 auto 0 -490px;
+	padding: 0 10px;
+	position: fixed;
+	text-shadow: 1px 1px 1px #000000;
+	width: 960px;
+	-webkit-border-radius: 10px 10px 0px 0px;
+	-moz-border-radius: 10px 10px 0px 0px;
+	-o-border-radius: 10px 10px 0px 0px;
+	-ms-border-radius: 10px 10px 0px 0px;
+	-khtml-border-radius: 10px 10px 0px 0px;
+	border-radius: 10px 10px 0px 0px;
+	/* shadow for the footer*/
+	-webkit-box-shadow: 0px 0px 11px #191919;
+	-moz-box-shadow: 0px 0px 11px #191919;
+	box-shadow: 0px 0px 11px #191919;
 }
- 
-
-
- 
 #footer_menu {
- margin: 0;
- padding: 0;
- width:auto;
- list-style: none;
- float: left;
- font-size:12px;
- padding: 12px 14px 14px 14px;
- border-right:1px solid rgba(0, 0, 0, 0.4);
- background: rgba(0, 0, 0, 0.1);
- display: block;
- color: #cccccc;
- text-decoration: none;
+	margin: 0;
+	padding: 0;
+	width: auto;
+	list-style: none;
+	float: left;
+	font-size: 12px;
+	padding: 12px 14px 14px 14px;
+	border-right: 1px solid rgba(0, 0, 0, 0.4);
+	background: rgba(0, 0, 0, 0.1);
+	display: block;
+	color: #cccccc;
+	text-decoration: none;
 }
-
-
 #footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
-   background:#6cf;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	/* Height of the footer */
+	background: #6cf;
 }
