--- a/application/assets/css/login.css
+++ b/application/assets/css/login.css
@@ -3,9 +3,14 @@
     height: 80px;
     width:100%;
     background: #333;
-    background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#333,#666), );
+    background: -webkit-linear-gradient(top,#333,#666);
     background: -moz-linear-gradient(top,#333,#666);
+    background: -o-linear-gradient(top,#333,#666);
+    background: -ms-linear-gradient(top,#333,#666);
+    background: linear-gradient(top,#333,#666);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#666');
+
     /*--CSS3 Box Shadows--*/
     -webkit-box-shadow: 0px 0px 9px #000;
     -moz-box-shadow: 0px 0px 9px #000;
@@ -71,7 +76,7 @@ h5 {
      -khtml-border-radius: 5px 5px 5px 0px;
      border-radius: 5px 5px 5px 0px;
 
-  
+      background-color: #d5d5d5;
       background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(237,238,239)), to(rgb(223,223,224)));
       background-image: -webkit-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
       background-image: -moz-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
