--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -525,9 +525,9 @@ a {
     background: linear-gradient(top, #805EBA, #390D86);
     color: white;
 }
-.plan_body {
-    width: 100%;
-    height: auto;
+.plan_header{
+    width: 50%;
+    height: 40px;
 }
 /* --------BOTTOM LINKS ---------*/
 .bottom_links {
