--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -529,6 +529,23 @@ a {
     width: 50%;
     height: 40px;
 }
+
+.plan_info{
+    
+}
+
+.plan_graphs{
+    
+}
+
+.plan_gender_graph{
+    
+}
+
+.attending_graph{
+    
+}
+
 /* --------BOTTOM LINKS ---------*/
 .bottom_links {
     width: 1024px;
