--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -244,6 +244,21 @@ a {
     color: white;
     bottom: 0px;
 }
+.view_plan_location {
+    float: left;
+    text-align: center;
+    padding: 4px;
+    position: relative;
+    border: 1px solid lightgray;
+    background: -webkit-gradient(linear,left top,left bottom,from(purple),to(#AF64DE));
+    background: -webkit-linear-gradient(top, purple, #AF64DE);
+    background: -moz-linear-gradient(top, purple, #AF64DE);
+    background: -o-linear-gradient(top, purple, #AF64DE);
+    background: -ms-linear-gradient(top, purple, #AF64DE);
+    background: linear-gradient(top, purple, #AF64DE);
+    color: white;
+    bottom: 0px;
+}
 .plan_deleted {
     width: auto;
     height: 50px;
