--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -31,3 +31,20 @@
 .attending_graph{
     
 }
+
+.delete_plan {
+    text-align: center;
+    padding: 4px;
+    border: 1px solid lightgray;
+    color: white;
+    background: -webkit-gradient(linear,left top,left bottom,from(#FF7373),to(red));
+    background: -webkit-linear-gradient(top, #FF7373, red);
+    background: -moz-linear-gradient(top, #FF7373, red);
+    background: -o-linear-gradient(top, #FF7373, red);
+    background: -ms-linear-gradient(top, #FF7373, red);
+    background: linear-gradient(top, #FF7373, red);
+    color: white;
+    right: 0px;
+    top: 0px;
+    position: absolute;
+}
