--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -6,10 +6,11 @@
 
 .plan_info{
     position:absolute;
+    top:35px;
+    left:15px;
     
     width:250px;
     height:200px;
-    left:15px;
     
     border:1px solid black;
 }
@@ -17,6 +18,7 @@
 .plan_graphs{
     position:absolute;
     right:15px;
+    top:35px;
     
     width:250px;
     height:200px;
