--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -612,15 +612,10 @@ a {
     position: absolute;
     top: -48px;
     right: 123px;
-    background: -webkit-gradient(linear,left top,left bottom,from(#AF64DE),to(purple));
-    background: -webkit-linear-gradient(top, #AF64DE, purple);
-    background: -moz-linear-gradient(top, #AF64DE, purple);
-    background: -o-linear-gradient(top, #AF64DE, purple);
-    background: -ms-linear-gradient(top, #AF64DE, purple);
-    background: linear-gradient(top, #AF64DE, purple);
     border: 1px solid lightgray;
+    background: white;
     padding: 9px;
-    color: white;
+    color: gray;
 }
 .make_plan {
     position: absolute;
