--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -230,6 +230,22 @@ a {
     bottom: 0px;
 }
 
+.invite_people {
+    text-align: center;
+    padding: 4px;
+    position: absolute;
+    border: 1px solid lightgray;
+    background: -webkit-gradient(linear,left top,left bottom,from(purple),to(#AF64DE));
+    background: -webkit-linear-gradient(top, purple, #AF64DE);
+    background: -moz-linear-gradient(top, purple, #AF64DE);
+    background: -o-linear-gradient(top, purple, #AF64DE);
+    background: -ms-linear-gradient(top, purple, #AF64DE);
+    background: linear-gradient(top, purple, #AF64DE);
+    color: white;
+    top: 0px;
+    right: 0px;
+}
+
 
 #map {
     width: 100%;
