--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -230,7 +230,7 @@ a {
     bottom: 0px;
 }
 
-.invite_people {
+back_to_plan {
     text-align: center;
     padding: 4px;
     position: absolute;
