--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -37,7 +37,7 @@
 }
 
 #plan_day {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 #plan_day .left_day_arrow {
@@ -100,4 +100,5 @@
 #plan_time {
     float: left;
     width: 300px;
+    margin-top: 5px;
 }
