--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -11,6 +11,7 @@
     top:40px;
     left:15px;
     text-align: left;
+    border-bottom:1px solid black;
     
     width:305px;
     height:200px;
