--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -12,7 +12,7 @@
     left:15px;
     text-align: left;
     border-bottom:1px solid black;
-    
+
     width:305px;
     height:200px;
 }
@@ -27,7 +27,8 @@
 }
 
 .plan_gender_graph{
-
+    height: 30px;
+    position: relative;
 }
 
 .attending_graph{
