--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -91,7 +91,7 @@ a {
     border: 1px solid lightgray;
     height: 100%;
     padding: 5px 0px 5px;
-    color: #727272;
+    color: darkorange;
     background: -webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
     background: -webkit-linear-gradient(top, #F3F6FF, #EEE);
     background: -moz-linear-gradient(top, #F3F6FF, #EEE);
@@ -113,7 +113,7 @@ a {
     border: 1px solid lightgray;
     height: 100%;
     padding: 5px 0px 5px;
-    color: #727272;
+    color: darkgreen;
     text-align: center;
     margin-bottom: 10px;
     width: 95%;
@@ -451,7 +451,8 @@ a {
     border: 1px solid lightgray;
     background: white;
     padding: 9px;
-    color: gray;
+    color: navy;
+    font-weight:bold;
 }
 #friends_plans_panel {
     width: 210px;
@@ -608,7 +609,7 @@ a {
     border: 1px solid lightgray;
     background: white;
     padding: 9px;
-    color: gray;
+    color: navy;
 }
 .make_plan {
     position: absolute;
