--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -609,7 +609,7 @@ a {
     border: 1px solid lightgray;
     background: white;
     padding: 9px;
-    color: navy;
+    color: gray;
     font-weight:bold;
 }
 .make_plan {
