--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -29,11 +29,14 @@
 .plan_gender_graph{
     width: 30px;
     height: 200px;
+    float: left;
+    margin-left: 100px;
 }
 
 .attending_graph{
     width: 30px;
     height: 200px;
+    margin-left: 100px;
 }
 
 .view_plan_location {
