--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -27,22 +27,16 @@
 
 #plan_day {
     margin-bottom: 10px;
+    width: 500px;
 }
 
-#plan_day .left_day_arrow {
-    margin-left: 10px;
-    float: none;
-    width: auto;
-}
-
-#plan_day .right_day_arrow {
-    float: none;
-    width: auto;
+#plan_day .left_day_arrow, #plan_day .right_day_arrow {
+    float: right
 }
 
 #plan_time {
     float: left;
-    width: 250px;
+    width: 300px;
     margin-top: 5px;
 }
 
