--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -47,13 +47,13 @@
     margin-top: 5px;
 }
 
-.plan_page_content .left {
+plan_events_wrapper .left {
     width: 50%;
     height: 100%;
     float: left;
 }
 
-.plan_page_content .right {
+plan_events_wrapper .right {
     width: 50%;
     height: 100%;
     float: left;
