--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -6,6 +6,10 @@
     margin-top: -125px;
 }
 
+#error_border {
+    border: 3px dashed green;
+}
+
 #create_plan_content .title_bar .text {
     float: left;
     height: 100%;
