--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -14,7 +14,7 @@
 /* ---------------------------------------------------- day bar graph classes ------------------------ */
 .graph_bar {
     width: 100%;
-    background-color: #3FA9F5;
+    background-color: #596FD0;
     color: white;
     border: none;
     position: absolute;
