--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -23,11 +23,11 @@
 }
 
 .network_graph_bar {
-    background-color: #596FD0;
+    background-color: #2F6594;
 }
 
 .location_graph_bar {
-    background-color: #596FD0;
+    background-color: #4C4CC0;
 }
 
 .bar_today {
