--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -47,12 +47,7 @@
     text-align: center;
     padding: 4px;
     border: 1px solid lightgray;
-    background: -webkit-gradient(linear,left top,left bottom,from(purple),to(#AF64DE));
-    background: -webkit-linear-gradient(top, purple, #AF64DE);
-    background: -moz-linear-gradient(top, purple, #AF64DE);
-    background: -o-linear-gradient(top, purple, #AF64DE);
-    background: -ms-linear-gradient(top, purple, #AF64DE);
-    background: linear-gradient(top, purple, #AF64DE);
+    background:-webkit-linear-gradient(top, #8AE28F, #22A228);
     color: white;
     position:absolute;
     top:0px;
