--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -1,9 +1,9 @@
 .plan_header{
     width: 100%;
-    height: 40px;
+    height: 35px;
     text-align:left;
-    padding-left:15px;
-    padding-top:5px;
+    font-size:25px;
+    font-weight:bold;
 }
 
 .plan_info{
