--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -1,6 +1,8 @@
 .plan_header{
-    width: 100%;
+    width: auto;
     height: 35px;
+    margin-left: 5px;
+    margin-right:5px;
     text-align:left;
     font-size:25px;
     font-weight:bold;
