--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -1,12 +1,13 @@
 .plan_header{
     width: auto;
-    height: 35px;
-    margin-left: 5px;
-    margin-right:5px;
+    height: 30px;
+    margin-left: 10px;
+    margin-right:10px;
     text-align:left;
     font-size:25px;
     font-weight:bold;
     border-bottom:1px solid black;
+    padding-top:5px;
 }
 
 .plan_info{
