--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -60,7 +60,7 @@
 
 #plan_event_select_wrapper {
     width: 100%;
-    height: 135px;
+    max-height: 135px;
     float: left;
     overflow: auto;
     padding: 5px;
