--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -21,6 +21,11 @@
     display: none;
 }
 
+#plan_privacy_wrapper {
+    text-align: center;
+    margin-top: 10px;
+}
+
 #plan_day .divset {
     padding-left: 5px;
     padding-right: 5px;
@@ -76,4 +81,8 @@
     color:white;
     margin-left:auto;
     margin-right:auto;
+}
+
+#plan_description_wrapper {
+    display: none;
 }
