--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -66,8 +66,9 @@
 #plan_event_select_wrapper {
     width: 100%;
     max-height: 135px;
-    float: left;
     overflow: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #create_plan_content h3 {
