--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -22,8 +22,9 @@
 }
 
 #plan_privacy_wrapper {
+    display: none;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #plan_day .divset {
