--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -99,5 +99,5 @@
 
 .notifications_tab_selected{
     background:-webkit-linear-gradient(top, #F8BA78, #F5952E);
-    color:gray;
+    color:white;
 }
