--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -89,7 +89,7 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.5);
     width: 100px;
     height: auto;
-    background-color: #F3F3F3;
+    background-color: white;
     text-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
