--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -130,7 +130,7 @@
     text-align: center;
 }
 
-.remove_following {
+.remove_following, .remove_joined {
     float:right;
     width: 75px;
     background: -webkit-gradient(linear,left top,left bottom,from(#FF7373),to(red));
@@ -199,12 +199,6 @@
     color: white;
     padding: 3px;
     text-align: center;
-}
-
-.profile_bottom_bar .remove_following{
-    position:absolute;
-    bottom:-10px;
-    right:-10px;
 }
 
 .group_entry_left_side{
