--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -4,8 +4,6 @@
     margin-top:35px;
     float: left;
     border-top:1px solid #CCC;
-    border-right:1px solid #CCC;
-    border-left:1px solid #CCC;
     text-align: center;
 }
 
@@ -18,6 +16,8 @@
     width: 100%;
     height: 70px;
     border-bottom: 1px solid #444;
+    border-left: 1px solid #444;
+    border-right: 1px solid #444;
     position: relative;
     padding-top:10px;
 }
