--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -310,8 +310,10 @@ a {
     float: left;
     width: 49%;
     height: auto;
-    border-left: 1px solid lightgray;
-    border-right: 1px solid lightgray;
+    border-left: 1px solid darkgray;
+    border-right: 1px solid darkgray;
+    border-top:1px solid darkgray;
+    margin-top:7px;
     background-color: white;
     text-align: center;
 }
@@ -322,6 +324,8 @@ a {
     border-left: 1px solid lightgray;
     border-right: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
+    border-top:1px solid darkgray;
+    margin-top:7px;
     background-color: white;
     text-align: center;
     padding-top: 10px;
