--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -1,7 +1,6 @@
 .plan_header{
     width: auto;
     height: 30px;
-    margin-left: 10px;
     text-align:left;
     font-size:25px;
     font-weight:bold;
@@ -12,11 +11,11 @@
 .plan_info{
     position:absolute;
     top:38px;
-    left:15px;
     text-align: left;
     border-bottom:1px solid black;
-
-    width:305px;
+    border-right:   1px solid black;
+    
+    width:327px;
     height:206px;
     padding-top:18px;
 }
