--- a/application/assets/css/plan_info.css
+++ b/application/assets/css/plan_info.css
@@ -8,7 +8,7 @@
     padding-top:5px;
 }
 
-.plan_info{
+.plan_info_wrapper{
     position:absolute;
     top:38px;
     text-align: left;
@@ -18,6 +18,10 @@
     width:327px;
     height:206px;
     padding-top:18px;
+}
+
+.plan_info{
+    margin-left:5px;
 }
 
 .plan_graphs{
